[workspace]
default-members = [
    "disarray"
]

members = [
    "disarray",
    "core",
    "derive",
    "macros",
    "network"
]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = 'unpacked'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = "s"
debug = false
split-debuginfo = 'off'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false