[workspace]
default-members = [
    "disarray"
]
exclude = [
    "xtask"
]
members = [
    "disarray",
    "cli",
    "crates/core",
    "crates/ledger",
    "crates/minis",
    "crates/network",
    "crates/runtime",
    "crates/sdk"
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = 'unwind'
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = 'unwind'
rpath = false
opt-level = 'z'
overflow-checks = false
