[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", "Scattered-Systems, DAO LLC (https://github.com/scattered-systems)"]
description = "Disarray is a hybrid blockchain network"
edition = "2021"
homepage = "https://github.com/scattered-systems/disarray/wiki/"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.21"

[workspace.dependencies]
decanter = { features = ["derive", "wasm"], version = "0.1.3" }
scsys = { features = ["full"], version = "0.1.41" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
smart-default = "0.6"
strum = { features = ["derive"], version = "0.24.1" }

[workspace]
default-members = [
    "disarray"
]
exclude = [
    "examples/*",
    "xtask"
]
members = [
    "disarray",
    "crates/*",
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = 'unwind'
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = 'unwind'
rpath = false
opt-level = 'z'
overflow-checks = false
