[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = []
description = "Conduit is a command line interface"
edition = "2021"
homepage = "https://github.com/FL03/conduit/wiki"
keywords = []
license = "Apache-2.0"
name = "conduit"
readme = "README.md"
repository = "https://github.com/FL03/conduit"
version = "0.1.0"

[[bin]]
bench = false
name = "conduit"
path = "src/main.rs"
test = true

[build-dependencies]

[dev-dependencies]

[dependencies]
axum = { features = ["headers", "http2", "macros"], version = "0.6.1" }
clap = { features = ["cargo", "derive", "env"], version = "4.0.29" }
futures = "0.3.25"
http = "0.2.8"
hyper = { features = ["full"], version = "0.14.23" }
scsys = { features = ["full"], version = "0.1.37" }
serde = { features = ["derive"], version = "1.0.151" }
serde_json = "1.0.90"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["full"], version = "1.23.0" }
tower = "0.4.13"
tower-http = { features = ["full"], version = "0.3.5" }
tracing = "0.1.37"
tracing-subscriber = { features = ["env-filter"], version = "0.3.16" }

[dependencies.conduit-sdk]
features = ["full"]
git = "https://github.com/FL03/conduit"
version = "0.1.0"

[dependencies.disarray-sdk]
features = ["full"]
path = "../crates/sdk"
version = "0.1.21"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
