[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = ["development-tools", "network-programming"]
description = "Disarray is an all-in-one toolkit for designing optimized Ethereum Native, zk-SNARK blockchains"
edition = "2021"
homepage = "https://scattered-systems.github.io/disarray"
keywords = ["async", "scsys"]
license = "MIT"
name = "disarray-core"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.11" # TODO - Update the cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
bson = { features = ["chrono-0_4", "serde_with"], version = "2.3.0" }
chrono = "0.4.19"
config = "0.13.1"
digest = "0.10.3"
futures = "0.3.21"
glob = "0.3.0"
hex = "0.4.3"
log = "0.4.17"
multihash = "0.16.2"
once_cell = "1.12.0"
scsys = { features = ["full"], version = "0.1.5" }
serde = { features = ["derive"], version = "1.0.138" }
serde_json = "1.0.82"
sha2 = "0.10.2"