[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = ["development-tools", "network-programming"]
description = "Disarray is an all-in-one toolkit for designing optimized Ethereum Native, zk-SNARK blockchains"
edition = "2021"
homepage = "https://scattered-systems.github.io/disarray"
keywords = ["async", "scsys"]
license = "MIT"
name = "disarray-core"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.13" # TODO - Update the cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
bincode = "1.3.3"
digest = "0.10.5"
itertools = "0.10.5"
hex = "0.4.3"
log = "0.4.17"
once_cell = "1.15.0"
scsys = { features = ["full"], version = "0.1.21" }
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"
sha2 = "0.10.6"