[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = []
description = "Disarray"
edition = "2021"
homepage = "https://scattered-systems.github.io/disarray"
keywords = ["derive", "macros"]
license = "MIT"
name = "disarray-derive"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.10" # TODO - Update the cargo package version

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = { features = ["full"], version = "1.0.98" }