[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", "Scattered-Systems, DAO LLC (https://github.com/scattered-systems)"]
categories = []
description = "Disarray is a hybrid blockchain network"
edition = "2021"
keywords = ["blockchain"]
license = "Apache-2.0"
name = "disarray"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.21"

[[bin]]
bench = true
name = "disarray"
path = "src/main.rs"
test = false

[build-dependencies]

[dependencies]
# Custom crates
acme = { features = ["net"], git = "https://github.com/FL03/acme", branch = "v0.2.5", version = "0.2.5" }
decanter = { features = ["derive"], version = "0.1.2" }
scsys = { features = ["full"], version = "0.1.40" }

# Standard dependencies
async-trait = "0.1"
axum = { features = ["headers", "http2", "macros"], version = "0.6" }
axum-core = "0.3"
clap = { features = ["cargo", "derive", "env"], version = "4" }
futures = "0.3.25"
http = "0.2.8"
hyper = { features = [], version = "0.14" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
smart-default = "0.6.0"
strum = { features = ["derive"], version = "0.24.1" }
tarpc = { features = ["full"], version = "0.31" }
tokio = { features = ["full"], version = "1" }
tower = "0.4.13"
tower-http = { features = ["full"], version = "0.3.5" }
tracing = "0.1.37"
tracing-subscriber = { features = ["env-filter"], version = "0.3.16" }

[dependencies.disarray-sdk]
features = ["full"]
path = "../crates/sdk"
version = "0.1.21"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
