[package]
name = "disarray"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
bench = true
name = "disarray"
path = "src/main.rs"
test = false

[build-dependencies]

[dependencies]
# Custom crates
acme = { features = ["net"], version = "0.2.5" }
decanter = { features = ["derive"], version = "0.1.3" }
scsys = { features = ["full"], version = "0.1.41" }

# SDK
disarray-sdk = { features = [], path = "../crates/sdk", version = "0.1.21" }

# Standard dependencies
async-trait = "0.1"
clap = { features = ["cargo", "derive", "env"], version = "4" }
futures = "0.3.25"
http = "0.2.8"
hyper = { features = [], version = "0.14" }
opentelemetry = { features = ["metrics", "rt-tokio", "testing"], version = "0.18.0" }
opentelemetry-jaeger = { features = ["rt-tokio"], version = "0.17.0" }
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tarpc = { features = ["full"], version = "0.31" }
tokio = { features = ["full"], version = "1.24" }
tower = "0.4.13"
tower-http = { features = ["full"], version = "0.3.5" }
tracing = "0.1.37"
tracing-opentelemetry = { features = [], version = "0.18.0"}
tracing-subscriber = { features = ["env-filter"], version = "0.3.16" }

# Runtime
wasmer = { features = [], version = "3.1.0" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
