[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Disarray is a hybrid blockchain network"
edition = "2021"
keywords = []
license = "Apache-2.0"
name = "disarray"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.21"

[build-dependencies]

[dependencies]
clap = { features = ["derive"], version = "4" }
futures = "0.3"
hex = "0.4"
opentelemetry = { features = ["rt-tokio"], version = "0.19" }
opentelemetry-jaeger = { features = ["full"], version = "0.18" }
rand = { features = [], version = "0.8.5" }
ring = { features = ["wasm32_c"], version = "0.16" }
scsys = { features = ["full"], version = "0.1" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24" }
tarpc = { features = ["full"], version = "0.33" }
tokio = { features = ["full"], version = "1.21" }
tower = "0.4.13"
tower-http = { features = ["full"], version = "0.3" }
tracing = "0.1"
tracing-opentelemetry = "0.19"
tracing-subscriber = { features = ["env-filter"], version = "0.3" }

[dependencies.disarray-sdk]
features = ["full"]
path = "../lib/sdk"
version = "0.1.21"

[dev-dependencies]
