[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = []
description = "Disarray macros"
edition = "2021"
homepage = "https://scattered-systems.github.io/disarray"
keywords = ["macros"]
license = "MIT"
name = "disarray-macros"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.14" # TODO - Update the cargo package version

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = { features = ["full"], version = "1.0.99" }

[dev-dependencies.disarray]
path = "../disarray"