[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = ["development-tools", "network-programming"]
description = "Disarray is an all-in-one toolkit for designing optimized Ethereum Native, zk-SNARK blockchains"
edition = "2021"
homepage = "https://scattered-systems.github.io/disarray"
keywords = ["async", "scsys"]
license = "MIT"
name = "disarray-network"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.20" # TODO - Update the cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
blake3 = "1.3.1"
digest = "0.10.5"
futures = "0.3.25"
glob = "0.3.0"
hex = "0.4.3"
hyper = { features = ["full"], version = "0.14.22" }
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = "1.15.0"
multihash = "0.16.3"
scsys = { features = ["full"], version = "0.1.24" }
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["full"], version = "1.21.2" }
tower = "0.4.13"
tower-http = "0.3.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.libp2p]
features = [
    "autonat",
    "dns",
    "dns-tokio",
    "floodsub", 
    "identify",
    "kad", 
    "mdns",
    "mdns-tokio",
    "metrics",
    "mplex", 
    "noise",
    "ping",
    "pnet",
    "request-response",
    "rsa",
    "secp256k1",
    "tcp",
    "tcp-tokio",
    "tokio",
    "websocket"
]
version = "0.49.0"

[dev-dependencies]
env_logger = "0.9.1"
