[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = ["development-tools", "network-programming"]
description = "This crate implements the networking features required for the hybrid blockchain network, Disarray"
edition = "2021"
homepage = "https://scattered-systems.github.io/disarray"
keywords = ["async", "scsys"]
license = "MIT"
name = "disarray-network"
readme = "README.md"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.20" # TODO - Update the cargo package version

[features]
default = []

# dev = ["disarray-ledger"]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
algae = { default-features = false, features = ["merkle"], version = "0.1.13" }
bincode = "1.3.3"
blake3 = "1.3.1"
bytes = "1.2.1"
crossbeam = "0.8.2"
digest = "0.10.5"
disarray-ledger = { path = "../ledger", version = "0.1.20" }
itertools = "0.10.5"
hex = "0.4.3"
hex-literal = "0.3.4"
log = "0.4.17"
mio = { features = ["os-ext", "os-poll", "net"], version = "0.8.5" }
mio-extras = "2.0.6"
once_cell = "1.15.0"
scsys = { features = ["full"], version = "0.1.24" }
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"
strum = { features = ["derive"], version = "0.24.1" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.libp2p]
features = [
    "autonat",
    "dns",
    "dns-tokio",
    "floodsub", 
    "identify",
    "kad", 
    "mdns",
    "mdns-tokio",
    "metrics",
    "mplex", 
    "noise",
    "ping",
    "pnet",
    "request-response",
    "rsa",
    "secp256k1",
    "tcp",
    "tcp-tokio",
    "tokio",
    "websocket"
]
version = "0.49.0"

[dev-dependencies]
env_logger = "0.9.1"


