[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = ["development-tools", "network-programming"]
description = "This crate is reserved for the disarray runtime powered by WebAssembly"
edition = "2021"
homepage = "https://scattered-systems.github.io/disarray"
keywords = ["scsys"]
license = "MIT"
name = "disarray-runtime"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.20" # TODO - Update the cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
scsys = { feaures = ["full"], version = "0.1.22" }
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"

[dev-dependencies]
disarray-core = { path = "../core" }