[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = ["development-tools", "network-programming"]
description = "Disarray is an all-in-one toolkit for designing optimized Ethereum Native, zk-SNARK blockchains"
edition = "2021"
homepage = "https://scattered-systems.github.io/disarray"
keywords = ["async", "scsys"]
license = "MIT"
name = "disarray"
readme = "README.md"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.20" # TODO - Update the cargo package version

[features]
default = ["core"]
full = ["core", "network", "runtime"]

core = ["disarray-core"]
network = ["disarray-network"]
runtime = ["disarray-runtime"]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
disarray-core = { optional = true, path = "../core", version = "0.1.13" }
# disarray-derive = { optional = true, path = "../derive", version = "0.1.14" }
# disarray-macros = { optional = true, path = "../macros", version = "0.1.14" }
disarray-network = { optional = true, path = "../network", version = "0.1.5" }
disarray-runtime = { optional = true, path = "../runtime", version = "0.1.0" }
