[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://github.com/scattered-systems)"]
categories = []
description = "This crate implements basic, blockchain-centric features used throughout the chain"
edition = "2021"
homepage = "https://github.com/scattered-systems/disarray/wiki"
keywords = ["scsys"]
license = "Apache-2.0"
name = "disarray-core"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.21" # TODO - Update the cargo package version

[features]
default = []
full = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dev-dependencies]

[build-dependencies]

[dependencies]
scsys = { features = ["full"], version = "0.1.37" }
serde = { features = ["derive"], version = "1.0.151" }
serde_json = "1.0.91"
strum = { features = ["derive"], version = "0.24.1" }
