[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://github.com/scattered-systems)"]
categories = []
description = "This crate implements basic, blockchain-centric features used throughout the chain"
edition = "2021"
homepage = "https://github.com/scattered-systems/disarray/wiki"
keywords = ["scsys"]
license = "Apache-2.0"
name = "disarray-core"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.21" # TODO - Update the cargo package version

[features]
default = []
full = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dev-dependencies]

[build-dependencies]

[dependencies]
decanter = { features = ["derive"], version = "0.1.2" }
scsys = { features = ["full"], version = "0.1.40" }

serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
