[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = ["development-tools", "network-programming"]
description = "This crate services our hybrid multi-chain directly implementing several critical structures from blocks to chains and transactions"
edition = "2021"
homepage = "https://scattered-systems.github.io/disarray"
keywords = ["async", "scsys"]
license = "Apache-2.0"
name = "disarray-ledger"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.21" # TODO - Update the cargo package version

[features]
default = [
    "core"
]
core = [
    "ring/default"
]
wasm = [
    "ring/wasm32_c"
]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dev-dependencies]

[dependencies]
algae = { features = ["full"], version = "0.1.17" }
decanter = { features = ["derive"], version = "0.1.2" }
scsys = { features = ["full"], version = "0.1.40" }

bincode = "1.3"
blake3 = "1.3"
bytes = "1.2"
ckb-merkle-mountain-range = "0.5"
crossbeam = "0.8"
digest = "0.10"
itertools = "0.10"
hex = "0.4"
hex-literal = "0.3"
log = "0.4"
mio = { features = ["net"], version = "0.8"}
mio-extras = "2"
once_cell = "1"
rand = { features = [], version = "0.8" }
ring = { features = ["wasm32_c"], version = "0.16" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24" }
slab = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
typenum = "1"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
