[package]
description = "This crate services our hybrid multi-chain directly implementing several critical structures from blocks to chains and transactions"
name = "disarray-ledger"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "core"
]
core = [
    "ring/default"
]
wasm = [
    "ring/wasm32_c"
]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dev-dependencies]

[dependencies]
algae = { features = ["full"], version = "0.1.17" }
decanter = { features = ["derive"], version = "0.1.3" }
scsys = { features = ["full"], version = "0.1.41" }

bincode = "1.3"
blake3 = "1.3"
bytes = "1.2"
ckb-merkle-mountain-range = "0.5"
crossbeam = "0.8"
digest = "0.10"
itertools = "0.10"
hex = "0.4"
hex-literal = "0.3"
log = "0.4"
mio = { features = ["net"], version = "0.8"}
mio-extras = "2"
once_cell = "1"
rand = { features = [], version = "0.8" }
ring = { features = ["wasm32_c"], version = "0.16" }
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
slab = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
typenum = "1"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
