[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com)"]
categories = []
description = "acme-minis"
edition = "2021"
homepage = "https://github.com/scattered-systems/disarray/wiki/"
keywords = ["async", "scsys"]
license = "Apache-2.0"
name = "disarray-minis"
publish = true
readme = "README.md"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.21" # TODO - Update cargo package version

[features]
default = ["core", "extras", "wasm"]
full = ["core", "extras", "wasm"]

core = [
    "tokio/macros"
]
extras = []
wasm = ["wasm-ext"]
wasm-ext = [
    "tokio_wasi/macros"
]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
decanter = { features = ["derive", "wasm"], version = "0.1.2" }
scsys = { features = ["full"], version = "0.1.40" }

mio = "0.8"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24" }
tokio = { features = ["macros"], optional = true, version = "1" }
tokio_wasi = { features = ["macros"], optional = true, version = "1.23" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]