[package]
description = "acme-minis"
name = "disarray-minis"
publish = true

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["core", "extras", "wasm"]
full = ["core", "extras", "wasm"]

core = [
    "tokio/macros"
]
extras = []
wasm = ["wasm-ext"]
wasm-ext = [
    "tokio_wasi/macros"
]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
decanter = { features = ["derive", "wasm"], version = "0.1.2" }
scsys = { features = ["full"], version = "0.1.40" }

mio = "0.8"
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tokio = { features = ["macros"], optional = true, version = "1" }
tokio_wasi = { features = ["macros"], optional = true, version = "1.23" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]