[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = ["development-tools", "network-programming"]
description = "This crate implements the networking features required for the hybrid blockchain network, Disarray"
edition = "2021"
homepage = "https://scattered-systems.github.io/disarray"
keywords = ["async", "scsys"]
license = "Apache-2.0"
name = "disarray-network"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.21" # TODO - Update the cargo package version

[features]
default = [
    "async", "minis"
]

async = [
    "tokio/macros"
]
minis = ["disarray-minis/full"]

wasm = [
    "decanter/wasm",
    "wasm-ext"
]
wasm-ext = [
    "libp2p/wasm-bindgen",
    "libp2p/wasm-ext",
    "libp2p/wasm-ext-websocket",
    "tokio_wasi/full"
]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dev-dependencies]

[dependencies]
algae = { features = ["full"], version = "0.1.15" }
decanter = { features = ["derive", "wasm"], version = "0.1.2" }
scsys = { features = ["full"], version = "0.1.40" }

disarray-ledger = { path = "../ledger", version = "0.1.21" }
disarray-minis = { optional = true, path = "../minis", version = "0.1.21" }

crossbeam = "0.8.2"
log = "0.4.17"
mio = { features = ["os-ext", "os-poll", "net"], version = "0.8.5" }
mio-extras = "2.0.6"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24.1" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { features = ["macros"], optional = true, version = "1.24" }
tokio_wasi = { features = ["full"], optional = true, version = "1.23" }

[dependencies.libp2p]
features = [
    "autonat",
    "dns",
    "ecdsa",
    "floodsub", 
    "identify",
    "kad",
    "macros",
    "mdns",
    "metrics",
    "mplex", 
    "noise",
    "ping",
    "pnet",
    "quic",
    "request-response",
    "rsa",
    "secp256k1",
    "serde",
    "tcp",
    "tokio",
    "wasm-bindgen",
    "wasm-ext",
    "wasm-ext-websocket",
    "websocket"
]
version = "0.50.0"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
