[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = ["development-tools", "network-programming"]
description = "This crate implements the runtime for the hybrid blockchain network, Disarray"
edition = "2021"
homepage = "https://scattered-systems.github.io/disarray"
keywords = ["async", "scsys"]
license = "Apache-2.0"
name = "disarray-runtime"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.21" # TODO - Update the cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]


[dependencies]
decanter = { features = ["derive"], version = "0.1.2" }
scsys = { features = ["full"], version = "0.1.40" }

async-trait = "0.1"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["full"], version = "1.21.2" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wasmer = "3.0.0"

[dev-dependencies]
env_logger = "0.10.0"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
