[package]
description = "This crate implements the runtime for the hybrid blockchain network, Disarray"
name = "disarray-runtime"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
decanter = { features = ["derive"], version = "0.1.3" }
scsys = { features = ["full"], version = "0.1.41" }

async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tokio = { features = ["full"], version = "1.24" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wasmer = "3.0.0"

[dev-dependencies]
env_logger = "0.10.0"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
