[package]
build = "build.rs"
categories = []
name = "disarray-sdk"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["core", "ledger", "network"]


core = []

ledger = ["disarray-ledger"]
network = ["disarray-network"]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dev-dependencies]
decanter = { features = ["derive"], version = "0.1.3" }
scsys = { features = [], version = "0.1.41" }

[build-dependencies]

[dependencies]
disarray-ledger = { features = [], optional = true, path = "../ledger", version = "0.1.21" }
disarray-network = { features = [], optional = true, path = "../network", version = "0.1.21" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
