[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = ["development-tools", "network-programming"]
description = "This crate services our hybrid multi-chain directly implementing several critical structures from blocks to chains and transactions"
edition = "2021"
homepage = "https://scattered-systems.github.io/disarray"
keywords = ["async", "scsys"]
license = "Apache-2.0"
name = "disarray-ledger"
readme = "README.md"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.21" # TODO - Update the cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dev-dependencies]
disarray-core = { path = "../core" }

[dependencies]
algae = { features = ["full"], version = "0.1.15" }
bincode = "1.3.3"
blake3 = "1.3.1"
bytes = "1.2.1"
ckb-merkle-mountain-range = "0.5.2"
crossbeam = "0.8.2"
digest = "0.10.5"
itertools = "0.11.0"
hex = "0.4.3"
hex-literal = "0.4.1"
log = "0.4.17"
mio = { features = ["net"], version = "0.8.5"}
mio-extras = "2.0.6"
once_cell = "1.15.0"
rand = { features = [], version = "0.8.5" }
ring = { features = ["wasm32_c"], version = "0.16.20" }
scsys = { features = ["full"], version = "0.1.33" }
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"
strum = { features = ["derive"], version = "0.24.1" }
slab = "0.4.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
typenum = "1.15.0"
